:bug: Fix <code> & <kbd> line wrapping

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -8,6 +8,10 @@
   border-bottom: 1px solid #eee;
 }
 
+#content code {
+  white-space: nowrap;
+}
+
 #content kbd {
   display: inline-block;
   padding: 3px 5px;
@@ -17,4 +21,5 @@
   border: solid 1px #ccc;
   border-bottom-color: #bbb;
   border-radius: 3px;
+  white-space: nowrap;
 }
